# drf-fat-models

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  ci.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
drf_fat_models/: __init__.py  models.py
test_project/: conftest.py
test_project/apps/customers/: models.py
test_project/apps/customers/migrations/: 0001_initial.py
test_project/apps/customers/tests/: test_customer_model.py
test_project/apps/orders/: models.py
test_project/apps/orders/migrations/: 0001_initial.py
test_project/apps/orders/tests/: test_order_model.py
test_project/config/: asgi.py  settings.py  urls.py  wsgi.py
test_project/customers/: models.py
test_project/helpers/: utils.py
test_project/helpers/tests/: test_utils.py
test_project/tests/fixtures/: customers.py  orders.py
tests/: test_drf_fat_models.py
